fixing footer buttons wrap for popover

--- a/app/bundles/CoreBundle/Assets/css/app.css
+++ b/app/bundles/CoreBundle/Assets/css/app.css
@@ -4525,6 +4525,7 @@ fieldset[disabled] .btn-ghost.btn-icon.focus i {
 }
 .footer-buttons .btn {
   align-items: flex-start;
+  min-width: 0;
   width: var(--spacing-13);
   border-radius: 0;
 }
