--- a/app/bundles/CoreBundle/Assets/css/app/less/components/buttons.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/buttons.less
@@ -352,7 +352,7 @@
   margin-bottom: -15px;
   .btn {
     align-items: flex-start;
-
+    min-width: 0;
     width: var(--spacing-13);
     border-radius: 0;
     &:first-child { border-radius: 0 0 0 var(--border-radius-md); }
